# qk-pca-analysis

./: .gitignore  README.md  pyproject.toml
configs/: e2e-light.yaml  example.yaml  multi-layer-post-rope.yaml  multi-layer.yaml
docs/: analysis.md  data-format.md  visualization.md
qk_pca/: analysis.py  cli.py  config.py  correlation.py  data.py  device.py  pca.py  visualization.py
results/e2e-light/: correlations.csv  summary.json
results/multi-layer/: correlations.csv  summary.json
results/multi-layer-post-rope/: correlations.csv  summary.json
tests/: conftest.py  test_analysis.py  test_cli.py  test_config.py  test_correlation.py  test_data.py  test_device.py  test_pca.py  test_visualization.py
